# pasteJSON

./: Cargo.toml  README.md
resources/: weather.cs  weather.json
src/: main.rs
