[package]
name = "pasteJSON"
version = "0.1.0"
authors = ["Daniel Mar <daniel.k.mar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0", features = ["preserve_order"]}
clap = "2.33.3"